--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 		<link rel='stylesheet' href='style.css'>
 		<script src='main.js' defer></script>
     </head>
-    <body></body>
+    <body>
+        <main id='main-container'>
+            <h1 id='heading'>Jaime's Roman Numeral Converter</h1>
+            <input type='number' min='1' max='3999' id='number'>
+            <button id='convert-btn'>Convert</button>
+            <div id='output'></div>
+        </main>
+    </body>
 </html>
