--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 		<title>Roman Numeral Converter</title>
 		<link rel='stylesheet' href='style.css'>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 		<script src='main.js' defer></script>
     </head>
     <body>
