--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <main id='main-container'>
             <h1 id='heading'>Jaime's Roman Numeral Converter</h1>
-            <input type='number' min='1' max='3999' id='number'>
+            <input type='number' min='1' max='3999' id='number' placeholder='0'>
             <button id='convert-btn'>Convert</button>
             <div id='output'></div>
         </main>
